# ai-mobile-ui-crawler

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LOCAL_OMNIPARSER_SETUP.md  README.md  TESTAPP_README.md  __init__.py  debug_imports.py  pyproject.toml  query_db.py  requirements.txt  research_hashing.py  run_cli.py  run_ui.py  run_ui.vbs  test_ai_monitor_data_flow.py  test_crawler_agent_integration.py  test_diag.py  validate_session.py
.agent/rules/: traverser.md
.codex/project-memory/: CHANGELOG.md
.cursor/rules/: specify-rules.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/agents/: copilot-instructions.md
.github/prompts/: speckit.principles.md  speckit.product-spec.md  speckit.tasks.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/notes/: input-text-failure-analysis.md
.planning/research/: questions.md
.planning/seeds/: text-entry-abstraction.md
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
cli/: argument_parser.py  main.py
cli/commands/: actions.py  analysis.py  apps.py  base.py  crawler.py  crawler_prompts.py  ollama.py  screenshots.py
cli/constants/: keys.py  messages.py
cli/services/: __init__.py  ai_run_report_service.py  analysis_service.py  app_scan_service.py  crawler_service.py  gemini_service.py  mobsf_service.py  ollama_service.py  openrouter_service.py  process_utils.py  (+2 more)
config/: app_config.py  context_constants.py  numeric_constants.py  package_constants.py  path_constants.py  urls.py  validation.py
core/: adapters.py  controller.py  crawl_context_builder.py  crawl_logger.py  crawler.py  crawler_config.py  crawler_loop.py  health_check.py  logging_infrastructure.py  packages_crud.py  signal_handler.py  storage.py  stuck_detector.py
docs/: AI_INPUT_STRUCTURE.md  ARCHITECTURE.md  PLAN-android-input-fixes.md  PLAN-crawler-navigation.md  cli-user-guide.md  gui-user-guide.md  testing_mailosaur.md
domain/: action_executor.py  agent_assistant.py  analysis_viewer.py  app_context_manager.py  app_discovery_utils.py  find_app_info.py  langchain_wrapper.py  model_adapters.py  prompt_builder.py  prompts.py  screen_state_manager.py  traffic_capture_manager.py  ui_controller.py  video_recording_manager.py
infrastructure/: ai_interaction_service.py  appium_driver.py  appium_error_handler.py  appium_helper.py  appium_server.py  capability_builder.py  credential_store.py  database.py  device_detection.py  element_finder.py  gesture_handler.py  gmail_service.py  image_preprocessor.py  mobsf_manager.py  ocr_service.py  session_manager.py  user_config_store.py  xml_screenshot_generator.py
interfaces/: cli.py  gui.py
scripts/: start.ps1
tests/: conftest.py  test_placeholder.py
ui/: agent_manager.py  allowed_packages_widget.py  app_scanner_ui.py  audio_manager.py  available_actions_widget.py  component_factory.py  config_ui_manager.py  constants.py  crawler_ui_manager.py  crawler_worker.py  custom_widgets.py  device_manager.py  log_manager.py  mobsf_ui_manager.py  report_manager.py  screenshot_zoom.py  strings.py  ui_helpers.py  ui_state_handler.py  ui_utils.py
utils/: paths.py  utils.py
(+621 files in other folders)
