[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-crawler"
version = "0.1.0"
description = "AI-Powered Android Exploration Tool"
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core dependencies
    "Pillow>=10.0.0",
    "cryptography>=42.0.0",
    "requests>=2.31.0",
    "ollama>=0.2.0",
    "google-genai>=0.3.0",
    "click>=8.1.0",
    "PySide6>=6.6.0",
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    "dpkt>=1.9.8",
    "imagehash>=4.3.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "replicate>=1.0.0",
    # AI / Agent engine
    "llama-index-core>=0.14.4,<0.15.0",
    "llama-index-workflows==2.8.3",
    "llama-index-llms-openai>=0.5.6",
    "llama-index-llms-openai-like>=0.5.1",
    "llama-index-llms-google-genai>=0.8.5",
    "llama-index-llms-ollama>=0.7.2",
    "llama-index-llms-openrouter>=0.4.2",
    # Device interaction
    "async_adbutils",
    # Utility
    "pydantic>=2.11.10",
    "aiofiles>=25.1.0",
    "python-dotenv>=1.2.1",
    # MCP support
    "mcp>=1.26.0",
    # Tracing API
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    # CLI / Terminal UI
    "rich>=13.0.0",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]
anthropic = [
    "llama-index-llms-anthropic>=0.8.6,<0.9.0",
]
arize = [
    "arize-phoenix>=12.3.0",
    "llama-index-callbacks-arize-phoenix>=0.1.0",
]

[project.scripts]
mobile-crawler-cli = "mobile_crawler.cli.main:run"
mobile-crawler-gui = "mobile_crawler.ui.main_window:run"

[project.urls]
Homepage = "https://github.com/ganainy/ai-mobile-ui-crawler"
Repository = "https://github.com/ganainy/ai-mobile-ui-crawler"
Issues = "https://github.com/ganainy/ai-mobile-ui-crawler/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mobile_crawler*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=mobile_crawler --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"] # assert false

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["mobile_crawler"]
